--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,30 +14,30 @@ on:
     types: [ published ]
 
 jobs:
-  gh-deploy:
-    name: "Publish Project (GitHub)"
-    runs-on: ubuntu-latest
+#   gh-deploy:
+#     name: "Publish Project (GitHub)"
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: "Set up JDK"
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          cache: maven
-          server-id: github
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_TOKEN
-#          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
-#          gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: "Set up JDK"
+#         uses: actions/setup-java@v2
+#         with:
+#           java-version: '11'
+#           distribution: 'adopt'
+#           cache: maven
+#           server-id: github
+#           server-username: MAVEN_USERNAME
+#           server-password: MAVEN_TOKEN
+# #          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
+# #          gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
 
-#       - name: "Github Deploy"
-#         run: mvn -B -Pgithub deploy --file pom.xml -DskipTests
-#         env:
-#           MAVEN_USERNAME: ${{ github.repository_owner }}
-#           MAVEN_TOKEN: ${{secrets.GITHUB_TOKEN}}
-# #          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
+# #       - name: "Github Deploy"
+# #         run: mvn -B -Pgithub deploy --file pom.xml -DskipTests
+# #         env:
+# #           MAVEN_USERNAME: ${{ github.repository_owner }}
+# #           MAVEN_TOKEN: ${{secrets.GITHUB_TOKEN}}
+# # #          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
 
  central-deploy:
    name: "Deploy Project (Central Repository)"
