--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
 
     <licenses>
         <license>
-            <name>The MIT License</name>
-            <url>https://opensource.org/licenses/MIT</url>
+            <name>The MIT License + Anti-996 License</name>
+            <url>https://github.com/Ghost-chu/SimpleReloadLib/blob/master/LICENSE</url>
         </license>
     </licenses>
 
