--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 
     <licenses>
         <license>
-            <name>The MIT License + Anti-996 License</name>
+            <name>The MIT License</name>
             <url>https://github.com/Ghost-chu/SimpleReloadLib/blob/master/LICENSE</url>
         </license>
     </licenses>
